fix modal alignment in user.html - edit user

--- a/style/adminAndManager/user.css
+++ b/style/adminAndManager/user.css
@@ -286,9 +286,11 @@ img.afteracadstext {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
   justify-content: center;
   align-items: center;
   overflow: auto;
+  margin-top: 3%;
 }
 
 .modal-content {
@@ -299,6 +301,7 @@ img.afteracadstext {
   max-width: 500px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
+  position: relative;
 }
 
 .close-btn {
